--- a/OOPSAndCore/OOPSAndCore.csproj
+++ b/OOPSAndCore/OOPSAndCore.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LinqTest.cs" />
     <Compile Include="Org\Amazon.cs" />
     <Compile Include="ArrayOperations.cs" />
     <Compile Include="Org\MicroSoft.cs" />
